--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mkswu (4.11-1) experimental; urgency=low
+
+  * upstream update (see changelog)
+
+ -- Dominique Martinet <dominique.martinet@atmark-techno.com>  Mon, 24 Apr 2023 15:12:34 +0900
+
 mkswu (4.10.1-1) experimental; urgency=low
 
   * upstream update (see changelog)
