hawkbit-compose: upgrade mysql:5.7 -> mariadb:10
latest hawkbit image no longer works with mysql 5.7:
org.flywaydb.core.internal.license.FlywayEditionUpgradeRequiredException: Flyway Teams Edition or MySQL upgrade required: MySQL 5.7 is no longer supported by Flyway Community Edition, but still supported by Flyway Teams Edition.

Note that this requires a DB upgrade (even if we'd use a newer
mysql instead of mariadb)
The mariadb container has MARIADB_AUTO_UPGRADE which will
automatically run mariadb-upgrade, but that apparently fails from a
mysql:5.7 db, so the logical migration path would be mysqldump +
mysqlrestore... (we set it anyway for later minor upgrades)

Give it a try and let user deal with any failure if required.

Note for later: always do a mysqldump before upgrading containers?

Change-Id: I6fecda8abaa41f6029385d067e73b2bd9853d665

--- a/po/ja/hawkbit_setup_container.po
+++ b/po/ja/hawkbit_setup_container.po
@@ -369,6 +369,42 @@ msgid "Install failed, please install apache2-utils manually"
 msgstr "apache2-utils (htpasswd) をインストールできませんでした。手動でインストールしてください。"
 
 #: hawkbit-compose/setup_container.sh
+msgid "MYSQL_ROOT_PASSWORD was set but not MYSQL_PASSWORD"
+msgstr "MYSQL_ROOT_PASSWORD が設定されていたが MYSQL_PASSWORD が設定されてません。"
+
+#: hawkbit-compose/setup_container.sh
+msgid "Warning: recent hawkBit container requires a newer mysql version"
+msgstr "Warning: 新しい hawkBit コンテナに mysql の更新が必要ですが、"
+
+#: hawkbit-compose/setup_container.sh
+msgid "but update is not transparent."
+msgstr "失敗する可能性があります。"
+
+#: hawkbit-compose/setup_container.sh
+msgid "Backing up $CONFIG_DIR/data/mysql to $CONFIG_DIR/data/mysql.backup..."
+msgstr "$CONFIG_DIR/data/mysql を $CONFIG_DIR/data/mysql.backup に保存します…"
+
+#: hawkbit-compose/setup_container.sh
+msgid "In case it this fails, move the data back and you upgrade manually"
+msgstr "mysql の更新が失敗した場合は手動で更新してください、"
+
+#: hawkbit-compose/setup_container.sh
+msgid "(or keep using the old hawkbit-update-server:0.3.0M7-mysql instead)"
+msgstr "あるいは hawkbit-update-server:0.3.0M7-mysql を使いつづけてください。"
+
+#: hawkbit-compose/setup_container.sh
+msgid "Trying to upgrade the db..."
+msgstr "データベースをアップグレードします…"
+
+#: hawkbit-compose/setup_container.sh
+msgid "Ok. You will need to upgrade container before restarting."
+msgstr "成功しました。コンテナのアップグレードを実行してください。"
+
+#: hawkbit-compose/setup_container.sh
+msgid "$CONFIG_DIR/data/mysql.backup can be deleted after confirming hawkBit works."
+msgstr "無事に起動確認できてから $CONFIG_DIR/data/mysql.backup を削除してください。"
+
+#: hawkbit-compose/setup_container.sh
 msgid "$arg requires an argument"
 msgstr "$arg に引数が必要です。"
 
@@ -431,6 +467,10 @@ msgstr "コンテナの設定が完了しました。docker-compose コマンド
 #: hawkbit-compose/setup_container.sh
 msgid "or run $CONFIG_DIR/$SCRIPT_BASE again to change configuration."
 msgstr "$CONFIG_DIR/setup_container.sh を再び実行すると設定の変更が可能です。"
+
+#: hawkbit-compose/setup_container.sh
+msgid "Update hawkBit containers?"
+msgstr "hawkBit コンテナを更新しますか？"
 
 #: hawkbit-compose/setup_container.sh
 msgid "Start hawkBit containers?"
