locale: ja: fix mkswu typo in version string...
Change-Id: I9098ea3cf6dd2f50972cb96226202accff327024

--- a/po/ja/mkswu.po
+++ b/po/ja/mkswu.po
@@ -816,7 +816,7 @@ msgstr "%s は %s の後にしか使えません。"
 
 #: mkswu
 msgid "mkswu version %s"
-msgstr "mksvu バージョン %s"
+msgstr "mkswu バージョン %s"
 
 #: mkswu
 msgid "Unrecognized option %s"
