--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mkswu (4.13) experimental; urgency=low
+
+  * upstream update (see changelog)
+
+ -- Dominique Martinet <dominique.martinet@atmark-techno.com>  Tue, 27 Jun 2023 09:55:09 +0900
+
 mkswu (4.12-1) experimental; urgency=low
 
   * upstream update (see changelog)
