--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mkswu (4.14) experimental; urgency=low
+
+  * upstream update (see changelog)
+
+ -- Dominique Martinet <dominique.martinet@atmark-techno.com>  Tue, 25 Jul 2023 10:36:10 +0900
+
 mkswu (4.13) experimental; urgency=low
 
   * upstream update (see changelog)
