--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mkswu (4.14.1) experimental; urgency=low
+
+  * upstream update (see changelog)
+
+ -- Dominique Martinet <dominique.martinet@atmark-techno.com>  Thu, 27 Jul 2023 11:48:44 +0900
+
 mkswu (4.14) experimental; urgency=low
 
   * upstream update (see changelog)
