--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mkswu (4.15) experimental; urgency=low
+
+  * upstream update (see changelog)
+
+ -- Dominique Martinet <dominique.martinet@atmark-techno.com>  Fri, 22 Sep 2023 12:48:39 +0900
+
 mkswu (4.14.1) experimental; urgency=low
 
   * upstream update (see changelog)
