--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mkswu (4.15.1) experimental; urgency=medium
+
+  * upstream update (see changelog)
+
+ -- Dominique Martinet <dominique.martinet@atmark-techno.com>  Tue, 26 Sep 2023 12:35:43 +0900
+
 mkswu (4.15) experimental; urgency=low
 
   * upstream update (see changelog)
