--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mkswu (5.0.1) experimental; urgency=medium
+
+  * upstream update (see changelog)
+
+ -- Dominique Martinet <dominique.martinet@atmark-techno.com>  Thu, 26 Oct 2023 14:42:44 +0900
+
 mkswu (5.0) experimental; urgency=medium
 
   * upstream update (see changelog)
