--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mkswu (5.1) experimental; urgency=medium
+
+  * upstream update (see changelog)
+
+ -- Dominique Martinet <dominique.martinet@atmark-techno.com>  Fri, 24 Nov 2023 09:04:41 +0900
+
 mkswu (5.0.1) experimental; urgency=medium
 
   * upstream update (see changelog)
