mkswu --init: modify auto-update from a.a.t message
make it clear that this includes base os and atmark-provided containers

Redmine: 60128
Change-Id: I46511247cbe911be49c51f58f32aa04e6eb1628d

--- a/po/ja/mkswu.po
+++ b/po/ja/mkswu.po
@@ -731,8 +731,8 @@ msgid "Could not copy initial_setup.desc from example dir"
 msgstr "initial_setup.descをコピーできませんでした。"
 
 #: mkswu
-msgid "Enable auto-update of BaseOS image from armadillo.atmark-techno.com servers? (N/y)"
-msgstr "BaseOSイメージのarmadillo.atmark-techno.comサーバーからの自動アップデートを行いますか？ (N/y)"
+msgid "Enable auto-updates (BaseOS / pre-installed containers) from armadillo.atmark-techno.com servers? (N/y)"
+msgstr "BaseOS/プリインストールコンテナを armadillo.atmark-techno.com サーバーから自動アップデートしますか？ (N/y)"
 
 #: mkswu
 msgid "Select update frequency ([weekly]/daily)"
