--- a/po/mkswu.pot
+++ b/po/mkswu.pot
@@ -549,7 +549,7 @@ msgstr ""
 msgid "Could not copy initial_setup.desc from example dir"
 msgstr ""
 #: mkswu
-msgid "Enable auto-update of BaseOS image from armadillo.atmark-techno.com servers? (N/y)"
+msgid "Enable auto-updates (BaseOS / pre-installed containers) from armadillo.atmark-techno.com servers? (N/y)"
 msgstr ""
 #: mkswu
 msgid "Select update frequency ([weekly]/daily)"
