mkswu --init: improve wording for abos-web password
This improves wording when setting abos-web password, as the info messages
are lost with the other messages.

Before:
```
Please set the password to log into abos-web.
Not setting a password will disable the service after initial setup.
abos-web user password (empty = locks account):
abos-web user password (confirm):
--
abos-web のパスワードを設定してください。
パスワードを設定しない場合 abos-web は使用できなくなります。
abos-webユーザのパスワード（空の場合はアカウントをロックします）:
abos-web ユーザのパスワード（確認）:
```

After:
```
Please set the password to log into abos-web.
abos-web password (empty = service disabled):
abos-web password (confirm):
--
abos-web のパスワードを設定してください。
abos-web のパスワード（空の場合はサービスを無効にします）:
abos-web のパスワード（確認）:
```

Change-Id: I18e7f0d15e329519636cf2c99bfba2f8edc07869

--- a/po/mkswu.pot
+++ b/po/mkswu.pot
@@ -516,19 +516,19 @@ msgstr ""
 msgid "A root password is required"
 msgstr ""
 #: mkswu
+msgid "abos-web password (empty = service disabled):"
+msgstr ""
+#: mkswu
 msgid "%s user password (empty = locks account):"
 msgstr ""
 #: mkswu
-msgid "%s user password (confirm):"
+msgid "%s password (confirm):"
 msgstr ""
 #: mkswu
 msgid "Could not generate password"
 msgstr ""
 #: mkswu
 msgid "Please set the password to log into abos-web."
-msgstr ""
-#: mkswu
-msgid "Not setting a password will disable the service after initial setup."
 msgstr ""
 #: mkswu
 msgid "Could not update %s"
