--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mkswu (5.2) experimental; urgency=medium
+
+  * upstream update (see changelog)
+
+ -- Dominique Martinet <dominique.martinet@atmark-techno.com>  Fri, 22 Dec 2023 15:58:34 +0900
+
 mkswu (5.1) experimental; urgency=medium
 
   * upstream update (see changelog)
