--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mkswu (5.2.1) experimental; urgency=medium
+
+  * upstream update (see changelog)
+
+ -- Dominique Martinet <dominique.martinet@atmark-techno.com>  Thu, 28 Dec 2023 10:26:47 +0900
+
 mkswu (5.2) experimental; urgency=medium
 
   * upstream update (see changelog)
