--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mkswu (5.2.2) experimental; urgency=medium
+
+  * upstream update (see changelog)
+
+ -- Dominique Martinet <dominique.martinet@atmark-techno.com>  Thu, 11 Jan 2024 17:43:56 +0900
+
 mkswu (5.2.1) experimental; urgency=medium
 
   * upstream update (see changelog)
