--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mkswu (5.3) experimental; urgency=medium
+
+  * upstream update (see changelog)
+
+ -- Dominique Martinet <dominique.martinet@atmark-techno.com>  Tue, 23 Jan 2024 13:06:13 +0900
+
 mkswu (5.2.2) experimental; urgency=medium
 
   * upstream update (see changelog)
