Changelog: fix option info-stdout -> stdout-info
hopefully nobody cares enough so release stays as is.

Change-Id: Id68bf952762906a9083de6944482ad9900a4fe7d

--- a/Changelog
+++ b/Changelog
@@ -6,7 +6,7 @@ db format by default
  - make old Armadillo 640 workaround a bit simpler
 
 features:
- - add swdesc_command/exec/script --info-stdout option
+ - add swdesc_command/exec/script --stdout-info option
  - add mkswu --version-cmp subcommand
 
    -- 2024-01-26
