--- a/po/ja/mkswu.po
+++ b/po/ja/mkswu.po
@@ -219,20 +219,24 @@ msgid "metadata (+ part) in %s while valid semver are ignored by swupdate, pleas
 msgstr " バージョン %s に含まれる+以降の部分はswupdateに無視されます。他を使ってください。"
 
 #: mkswu
+msgid "component must not contain spaces (%s)"
+msgstr "コンポーネント %s にスペースを含めることはできません。"
+
+#: mkswu
+msgid "Warning: component '%s' starts with extraos, did you mean extra_os ?"
+msgstr "Warning: コンポーネント '%s' の「extraos」は「extra_os」の間違いでしょうか？"
+
+#: mkswu
+msgid "version must not contain spaces (%s = %s)"
+msgstr "バージョン %s = %s にスペースを含めることはできません。"
+
+#: mkswu
 msgid "install_if must be higher or different"
 msgstr "install_if には「higher」か「different」を指定してください。"
 
 #: mkswu
 msgid "Warning: %s version %s has been simplified to %s"
 msgstr "Warning: %s のバージョン %s は %s に略されました。"
-
-#: mkswu
-msgid "component must not contain spaces (%s)"
-msgstr "コンポーネント %s にスペースを含めることはできません。"
-
-#: mkswu
-msgid "version must not contain spaces (%s = %s)"
-msgstr "バージョン %s = %s にスペースを含めることはできません。"
 
 #: mkswu
 msgid "failed to compress %s"
