--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mkswu (5.4) experimental; urgency=medium
+
+  * upstream update (see changelog)
+
+ -- Dominique Martinet <dominique.martinet@atmark-techno.com>  Mon, 26 Feb 2024 10:41:43 +0900
+
 mkswu (5.3) experimental; urgency=medium
 
   * upstream update (see changelog)
