--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,11 @@
-mkswu (5.4) experimental; urgency=medium
+mkswu (5.4.1) experimental; urgency=medium
 
   * upstream update (see changelog)
+
+ -- Dominique Martinet <dominique.martinet@atmark-techno.com>  Mon, 26 Feb 2024 15:29:50 +0900
+
+mkswu (5.4) experimental; urgency=medium
+
 
  -- Dominique Martinet <dominique.martinet@atmark-techno.com>  Mon, 26 Feb 2024 10:41:43 +0900
 
