--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mkswu (5.5) experimental; urgency=low
+
+  * upstream update (see changelog)
+
+ -- Dominique Martinet <dominique.martinet@atmark-techno.com>  Mon, 25 Mar 2024 15:20:06 +0900
+
 mkswu (5.4.1) experimental; urgency=medium
 
   * upstream update (see changelog)
