mkswu: add warning when using NO_PRESERVE_FILE
also update locales which weren't updated in previous commits

Change-Id: Ie3c6c66ce0a4695a36a13485a41707e255a2ab5d

--- a/README
+++ b/README
@@ -59,6 +59,8 @@ swdesc_option CONTAINER_CLEAR
 swdesc_option NO_PRESERVE_FILES
     if set, swupdate will not copy files listed in
     /etc/swupdate_preserve_files when base_os is updated
+    This option is deprecated until a proper way of running
+    'first boot'-style scripts is available.
 swdesc_option ROOTFS_FSTYPE={ext4,btrfs}
     filesystem to use for /
     By default the same as current fs is reused.
