--- a/po/ja/mkswu.po
+++ b/po/ja/mkswu.po
@@ -923,6 +923,14 @@ msgid "No command could be found in desc files"
 msgstr "desc ファイルに有効なコマンドがありませんでした。"
 
 #: mkswu
+msgid "Warning: 'swdesc_option %s' was not used, did you"
+msgstr "Warning: 'swdesc_option %s' が使用されていませでした。"
+
+#: mkswu
+msgid "place it before the commands you want to run?"
+msgstr "設定するコマンドの前に実行してください。"
+
+#: mkswu
 msgid "You have sideloaded containers, copy all these files to USB drive:"
 msgstr "以下のファイルをUSBメモリにコピーしてください："
 
